--- a/development/build.gradle
+++ b/development/build.gradle
@@ -11,6 +11,14 @@ gradlePlugin {
     plugins {
         inspectusPlugin {
             id = 'com.kazurayam.inspectus-gradle-plugin'
+            implementationClass = 'com.kazurayam.inspectus.gradle.DispatchPlugin'
+        }
+        inspectus4katalonPlugin {
+            id = 'com.kazurayam.inspectus4katalon-gradle-plugin'
+            implementationClass = 'com.kazurayam.inspectus.gradle.KatalonDispatchPlugin'
+        }
+        greetingPlugin {
+            id = 'com.kazurayam.greeting-gradle-plugin'
             implementationClass = 'com.kazurayam.inspectus.gradle.GreetingPlugin'
         }
     }
@@ -20,11 +28,34 @@ repositories {
     mavenCentral()
 }
 
+def functionalTest = sourceSets.create("functionalTest")
+def functionalTestTask = tasks.register("functionalTest", Test) {
+    description = "Runs the functional tests."
+    group = "verification"
+    testClassesDirs = functionalTest.output.classesDirs
+    classpath = functionalTest.runtimeClasspath
+    mustRunAfter(tasks.named('test'))
+}
+
+tasks.named('check') {
+    dependsOn(functionalTestTask)
+}
+
+gradlePlugin {
+    // configure the `java-gradle-plugin` so that it looks at the `sourceSets.functionalTest`
+    // to find the tests for the custom plugin.
+    testSourceSets(sourceSets.functionalTest)
+    // This makes `org.gradle.testkit.runner.GradleRunner` class available to the
+    // functionalTest classes.
+}
+
 dependencies {
     gradleApi()
     localGroovy()
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    functionalTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    functionalTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
 test {
