--- a/development/build.gradle
+++ b/development/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.kazurayam'
-version '0.1.0-SNAPSHOT'
+version '0.1.0'
 
 gradlePlugin {
     plugins {
@@ -62,7 +62,17 @@ test {
     useJUnitPlatform()
 }
 
+
+
+
+
+
+
+
+
 //---------------------------------------------------------------------
+// studying ["Developing Custom Gradle Plugin"](https://docs.gradle.org/current/userguide/custom_plugins.html)
+
 interface GreetingPluginExtension {
     Property<String> getMessage()
     Property<String> getGreeter()
