--- a/development/build.gradle
+++ b/development/build.gradle
@@ -2,22 +2,40 @@ plugins {
     id 'groovy'
     id 'java-gradle-plugin'
     id 'maven-publish'
-    id 'signing'
+    id "com.gradle.plugin-publish" version "1.1.0"
 }
 
-group 'com.kazurayam'
-version '0.1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
+group = 'com.kazurayam'
+version = '0.1.0'
+
+java {
+    withSourcesJar()
+    withJavadocJar()
 }
 
 dependencies {
-    implementation 'org.apache.groovy:groovy:4.0.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation gradleApi()
+    implementation localGroovy()
 }
 
-test {
-    useJUnitPlatform()
+gradlePlugin {
+    plugins {
+        inspectus4katalonPlugin {
+            id = "com.kazurayam.inspectus4katalon"
+            displayName = "Inspectus for Katalon Gradle Plugin"
+            description = "adds 'gradle drivers' task which downloads required jars" +
+                    " from the Maven Central repository to locate them into" +
+                    " the Drivers folder of a Katalon Studio project"
+            implementationClass = "com.kazurayam.inspectus.gradle.KatalonDriversPlugin"
+        }
+    }
 }
+
+pluginBundle {
+    // information displayed in the Gradle Plugin Portal
+    website = "https://github.com/kazurayam/inspectus4katalon-gradle-plugin"
+    vcsUrl = "https://github.com/kazurayam/inspectus4katalon-gradle-plugin"
+    tags = ["inspectus", "visual-inspection", "katalon-studio"]
+}
+
