--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,8 @@ jobs:
   # refer to https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
   run_junit_tests:
     runs-on: ubuntu-latest
+    default:
+      working-directory: ./development
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
@@ -34,6 +36,5 @@ jobs:
       - name: Run the Gradle test task
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          working-directory: ./development
           arguments: test --tests "*"
 
