--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,6 @@ jobs:
   # refer to https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
   run_junit_tests:
     runs-on: ubuntu-latest
-    default:
-      working-directory: ./development
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
@@ -26,15 +24,19 @@ jobs:
 
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
+        with:
+          working-directory: ./development
 
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
+          working-directory: ./development
           gradle-version: 7.4.2
           arguments: development
 
       - name: Run the Gradle test task
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
+          working-directory: ./development
           arguments: test --tests "*"
 
