--- a/application/build.gradle
+++ b/application/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.kazurayam:inspectus4katalon:0.1.5'
+        classpath 'com.kazurayam:inspectus4katalon:0.2.0-SNAPSHOT'
     }
 }
 
