--- a/application/settings.gradle
+++ b/application/settings.gradle
@@ -1,2 +1,10 @@
 rootProject.name = 'inspectus4katalon-gradle-plugin-application'
 
+// include the build of the plugin development project
+includeBuild("../development") {
+    dependencySubstitution {
+        // explicitly load the output of the included build
+        // into the consumer project's classpath
+        substitute(module('com.kazurayam:inspectus4katalon'))
+    }
+}
