--- a/application/build.gradle
+++ b/application/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'com.kazurayam.inspectus4katalon'
 
 drivers {
     inspectusVersion = '0.6.0'
+    ExecutionProfilesLoaderVersion = '1.2.1'
 }
 
 // type
