--- a/rehearsal/settings.gradle
+++ b/rehearsal/settings.gradle
@@ -1,5 +1,5 @@
 // include the build of the plugin development project
-includeBuild("../development") {
+includeBuild("..") {
     dependencySubstitution {
         // explicitly load the output of the included build
         // into the consumer project's classpath
