--- a/rehearsal/build.gradle
+++ b/rehearsal/build.gradle
@@ -16,3 +16,13 @@ drivers {
 
 // type
 // $ ./gradlew drivers
+
+repositories {
+    maven {
+        url = uri("https://maven.pkg.github.com/kazurayam/inspectus")
+        credentials {
+            username = project.findProperty("gpr.user")
+            password = project.findProperty("gpr.key")
+        }
+    }
+}
