--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'groovy'
     id "com.gradle.plugin-publish" version "1.1.0"
+    id("com.gradle.enterprise") version("3.9")
 }
 
 group = 'com.kazurayam'
@@ -79,6 +80,16 @@ publishing {
                 username = project.findProperty("gpr.user")
                 password = project.findProperty("gpr.key")
             }
+        }
+    }
+}
+
+gradleEnterprise {
+    if (System.getenv("CI") != null) {
+        buildScan {
+            publishAlways()
+            termsOfServiceUrl = "https://gradle.com/terms-of-service"
+            termsOfServiceAgree = "yes"
         }
     }
 }
