--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Run the Gradle test task
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: check
+          arguments: check --scan
 
