--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,13 @@ ext {
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://maven.pkg.github.com/kazurayam/inspectus")
+        credentials {
+            username = project.findProperty("gpr.user")
+            password = project.findProperty("gpr.key")
+        }
+    }
 }
 
 java {
