--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,7 @@ ext {
 
 repositories {
     mavenCentral()
-    maven {
-        url = uri("https://maven.pkg.github.com/kazurayam/inspectus")
-        credentials {
-            username = project.findProperty("gpr.user")
-            password = project.findProperty("gpr.key")
-        }
-    }
+    mavenLocal()
 }
 
 java {
