use the adoc2md

--- a/build.gradle
+++ b/build.gradle
@@ -80,3 +80,11 @@ publishing {
     }
 }
 
+task indextoc {
+    doLast {
+        exec {
+            workingDir './docs'
+            commandLine './adoc2md.sh', '-t', '-v', project.version
+        }
+    }
+}
